@@ -17,20 +17,18 @@
  * 
  * =============================================================================
  */
-package org.jasypt.util.numeric;
+package org.jasypt.util.text;
 
-import java.math.BigInteger;
-
-import org.jasypt.encryption.pbe.StandardPBEIntegerEncryptor;
+import org.jasypt.encryption.pbe.StandardPBEStringEncryptor;
 import org.jasypt.encryption.pbe.algorithms.PBEAlgorithms;
+
 
 /**
  * <p>
- * Utility class for easily performing normal-strength encryption of 
- * BigInteger objects.
+ * Utility class for easily performing normal-strength encryption of texts.
  * </p>
  * <p>
- * This class internally holds a {@link StandardPBEIntegerEncryptor} 
+ * This class internally holds a {@link StandardPBEStringEncryptor} 
  * configured this way:
  * <ul>
  *   <li>Algorithm: <tt>PBEWithMD5AndDES</tt>.</li>
@@ -42,32 +40,32 @@ import org.jasypt.encryption.pbe.algorithms.PBEAlgorithms;
  * <ol>
  *   <li>Create an instance (using <tt>new</tt>).</li>
  *   <li>Set a password (using <tt>{@link #setPassword(String)}</tt>).</li>
- *   <li>Perform the desired <tt>{@link #encrypt(BigInteger)}</tt> or 
- *       <tt>{@link #decrypt(BigInteger)}</tt> operations.</li> 
+ *   <li>Perform the desired <tt>{@link #encrypt(String)}</tt> or 
+ *       <tt>{@link #decrypt(String)}</tt> operations.</li> 
  * </ol> 
  * </p>
  * <p>
  * This class is <i>thread-safe</i>.
  * </p>
  * 
- * @since 1.2
+ * @since 1.2 (class existed as org.jasypt.util.TextEncryptor since 1.0)
  * 
  * @author Daniel Fern&aacute;ndez Garrido
  * 
  */
-public class StandardIntegerEncryptor implements IntegerEncryptor {
+public final class BasicTextEncryptor implements TextEncryptor {
 
 
     // The internal encryptor 
-    private StandardPBEIntegerEncryptor encryptor = null;
+    private StandardPBEStringEncryptor encryptor = null;
     
     
     /**
-     * Creates a new instance of <tt>StandardIntegerEncryptor</tt>.
+     * Creates a new instance of <tt>BasicTextEncryptor</tt>.
      */
-    public StandardIntegerEncryptor() {
+    public BasicTextEncryptor() {
         super();
-        this.encryptor = new StandardPBEIntegerEncryptor();
+        this.encryptor = new StandardPBEStringEncryptor();
         this.encryptor.setAlgorithm(PBEAlgorithms.PBE_WITH_MD5_AND_DES);
     }
 
@@ -81,26 +79,26 @@ public class StandardIntegerEncryptor implements IntegerEncryptor {
         encryptor.setPassword(password);
     }
 
-
-    /**
-     * Encrypts a number
-     * 
-     * @param number the number to be encrypted.
-     * @see StandardPBEIntegerEncryptor#encrypt(BigInteger)
-     */
-    public BigInteger encrypt(BigInteger number) {
-        return encryptor.encrypt(number);
-    }
-    
     
     /**
-     * Decrypts a number.
+     * Encrypts a message.
      * 
-     * @param encryptedNumber the number to be decrypted.
-     * @see StandardPBEIntegerEncryptor#decrypt(BigInteger)
+     * @param message the message to be encrypted.
+     * @see StandardPBEStringEncryptor#encrypt(String)
      */
-    public BigInteger decrypt(BigInteger encryptedNumber) {
-        return encryptor.decrypt(encryptedNumber);
+    public String encrypt(String message) {
+        return encryptor.encrypt(message);
     }
 
+    
+    /**
+     * Decrypts a message.
+     * 
+     * @param encryptedMessage the message to be decrypted.
+     * @see StandardPBEStringEncryptor#decrypt(String)
+     */
+    public String decrypt(String encryptedMessage) {
+        return encryptor.decrypt(encryptedMessage);
+    }
+    
 }
